--- a/playgrounds.html
+++ b/playgrounds.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html lang = "en">
-    <head>
+<!DOCTYPE html> <!-- declarationd defines that this is an html 5 doc-->
+<html lang = "en">  <!-- Root element of an html page-->
+    <head> <!--contains meta info-->
         <title>Playgrounds</title>
     </head>
-    <body>
-        Hello World shit
+    <body> <!--container for all visible elements-->
+        <h1>Welp</h1>
+        <p1>Hello World shit</p1>
     </body>
 </html>
