add meta attributes

--- a/playgrounds.html
+++ b/playgrounds.html
@@ -5,6 +5,6 @@
     </head>
     <body> <!--container for all visible elements-->
         <h1>Welp</h1>
-        <p1>Hello World shit</p1>
+        <p1>Here's some Hello World shit</p1>
     </body>
 </html>
