--- a/playgrounds.html
+++ b/playgrounds.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> <!-- declarationd defines that this is an html 5 doc-->
 <html lang = "en">  <!-- Root element of an html page-->
-    <head> <!--contains meta info-->
+    <head>
+        <meta charset="utf-8"> <!--contains meta info-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Playgrounds</title>
     </head>
     <body> <!--container for all visible elements-->
