--- a/playgrounds.html
+++ b/playgrounds.html
@@ -8,5 +8,9 @@
     <body> <!--container for all visible elements-->
         <h1>Welp</h1>
         <p1>Here's some Hello World shit</p1>
+        <br>
+        <img src = "https://i.pinimg.com/736x/c9/f7/f5/c9f7f574cf8502757a261b38206200fc.jpg" alt = "spooked abel" width = "100" height="100">
+        <br>
+        <p1>Now <a href = "https://www.youtube.com/watch?v=F_k2THcD1PA"> click on deez </a></p1>
     </body>
 </html>
