--- a/playgrounds.html
+++ b/playgrounds.html
@@ -8,9 +8,10 @@
     <body> <!--container for all visible elements-->
         <h1>Welp</h1>
         <p1>Here's some Hello World shit</p1>
-        <br>
-        <img src = "https://i.pinimg.com/736x/c9/f7/f5/c9f7f574cf8502757a261b38206200fc.jpg" alt = "spooked abel" width = "100" height="100">
+        <hr>
+        <a href = "https://youtu.be/S7OTZMopkUg"> <img src = "https://i.pinimg.com/736x/c9/f7/f5/c9f7f574cf8502757a261b38206200fc.jpg" alt = "spooked abel" width = "300" height="300"></a>
         <br>
         <p1>Now <a href = "https://www.youtube.com/watch?v=F_k2THcD1PA"> click on deez </a></p1>
+        <hr>
     </body>
 </html>
