button opens a new tab

--- a/playgrounds.html
+++ b/playgrounds.html
@@ -12,7 +12,7 @@
         <hr>
         <a href = "https://youtu.be/S7OTZMopkUg"> <img src = "resources/scambel.jpg" alt = "spooked abel" width = "300" height="300"></a>
         <br>
-        <p1><button type = "button" onclick = "document.location= 'https://www.youtube.com/watch?v=F_k2THcD1PA'"><b>Now click on deez</b></a></p1>
+        <p1><button type = "button" onclick = "window.open('https://www.youtube.com/watch?v=F_k2THcD1PA')"><b>Now click on deez</b></a></p1>
         <hr>
     </body>
 </html>
