image file opens a new tab

--- a/playgrounds.html
+++ b/playgrounds.html
@@ -10,7 +10,7 @@
         <h1>Welp</h1></strong>
         <p1><em>Here's some Hello World shit</p1></em>
         <hr>
-        <a href = "https://youtu.be/S7OTZMopkUg"> <img src = "resources/scambel.jpg" alt = "spooked abel" width = "300" height="300"></a>
+        <a href = "https://youtu.be/S7OTZMopkUg" target="_blank"> <img src = "resources/scambel.jpg" alt = "spooked abel" width = "300" height="300"></a>
         <br>
         <p1><button type = "button" onclick = "window.open('https://www.youtube.com/watch?v=F_k2THcD1PA')"><b>Now click on deez</b></a></p1>
         <hr>
