add abel lost gif and classes for media introduced for css

--- a/playgrounds.html
+++ b/playgrounds.html
@@ -10,9 +10,10 @@
         <h1>Welp</h1></strong>
         <p1><em>Here's some Hello World shit</p1></em>
         <hr>
-        <a href = "https://youtu.be/S7OTZMopkUg" target="_blank"> <img src = "resources/scambel.jpg" alt = "spooked abel"></a>
+        <a href = "https://youtu.be/S7OTZMopkUg" target="_blank"> <img src = "resources/scambel.jpg" alt = "spooked abel" class="spooked-abel"></a>
         <br>
         <button type="button" class="arrow-button" onclick="window.open('https://www.youtube.com/watch?v=F_k2THcD1PA')">Now click on deez<span class="arrow"></span></button>
         <hr>
+        <a href="https://www.youtube.com/watch?v=LxGxHxfHqXg" target="_blank"><img src="resources/weekndwhoasked.gif" class="lost-gif" alt="abel looking lost in the fire"></a>
     </body>
 </html>
