--- a/playgrounds.html
+++ b/playgrounds.html
@@ -7,13 +7,14 @@
         <title>Playgrounds</title>
     </head>
     <body> <!--container for all visible elements-->
-        <h1>Welp</h1></strong>
-        <p1><em>Here's some Hello World shit</p1></em>
-        <hr>
+        <div class="d-flex flex-column justify-content-center w-100 h-100"></div>
+        <h1><strong>Welp</strong></h1>
+        <p1>Here's some hello World shit</p1>
+        <br>
         <a href = "https://youtu.be/S7OTZMopkUg" target="_blank"> <img src = "resources/scambel.jpg" alt = "spooked abel" class="spooked-abel"></a>
         <br>
         <button type="button" class="arrow-button" onclick="window.open('https://www.youtube.com/watch?v=F_k2THcD1PA')">Now click on deez<span class="arrow"></span></button>
-        <hr>
+        <br>
         <a href="https://www.youtube.com/watch?v=LxGxHxfHqXg" target="_blank"><img src="resources/weekndwhoasked.gif" class="lost-gif" alt="abel looking lost in the fire"></a>
     </body>
 </html>
