--- a/playgrounds.html
+++ b/playgrounds.html
@@ -8,7 +8,8 @@
     </head>
     <body> <!--container for all visible elements-->
         <div class="d-flex flex-column justify-content-center w-100 h-100"></div>
-        <h1><strong>Welp</strong></h1>
+        <h1 class="worm-text"><strong>Welp</strong></h1>
+        <br>
         <p1>Here's some hello World shit</p1>
         <br>
         <a href = "https://youtu.be/S7OTZMopkUg" target="_blank"> <img src = "resources/scambel.jpg" alt = "spooked abel" class="spooked-abel"></a>
