Removed squiggle text

--- a/playgrounds.html
+++ b/playgrounds.html
@@ -8,7 +8,7 @@
     </head>
     <body> <!--container for all visible elements-->
         <div class="d-flex flex-column justify-content-center w-100 h-100"></div>
-        <h1 class="worm-text"><strong>Welp</strong></h1>
+        <h1><strong>Welp</strong></h1>
         <br>
         <p1>Here's some hello World shit</p1>
         <br>
