--- a/playgrounds.html
+++ b/playgrounds.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"> <!--contains meta info-->
         <link rel="stylesheet" href="playgrounds.css"> <!--linking css file-->
+        <link rel="icon" type="image/x-icon" href="resources/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Playgrounds</title>
     </head>
